[tool.poetry]
name = "time-series-library"
version = "0.1.0"
description = ""
authors = ["aweftr <aweftger@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.8"
sktime = "^0.21.0"
einops = "^0.6.1"
matplotlib = "^3.7.2"
numpy = "^1.23"
pandas = "^1.5"
patool = "^1.12"
reformer-pytorch = "^1.4.4"
scikit-learn = "^1.3.0"
scipy = "^1.10"
sympy = "^1.12"
torch = "^1.13"
tqdm = "^4.66.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
